test/valid/typeguard.js
function f(x) {
    if (typeof x === 'string') { return x; } else { return x; }
}

f(2);


