test/invalid/maybe_refine.js
var x;
var y = 2;
if (typeof x !== 'undefined') {
    y=x;
}
y = x;
